fix bag on Keycloack token filter